# ChangeLog for net-irc/unrealircd
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.20 2004/08/14 18:37:04 swegener Exp $

  14 Aug 2004; Sven Wegener <swegener@gentoo.org> unrealircd-3.2.1-r1.ebuild:
  Added info to pkg_postinst().

*unrealircd-3.2.1-r1 (14 Aug 2004)

  14 Aug 2004; Sven Wegener <swegener@gentoo.org> +unrealircd-3.2.1-r1.ebuild:
  Revision bump. Made the hub support optional and added support for the ipv6
  USE flag.

  25 Jul 2004; Sven Wegener <swegener@gentoo.org> unrealircd-3.2.1.ebuild:
  Fixed wrong path in ircdchk cron script.

  24 Jul 2004; Sven Wegener <swegener@gentoo.org> unrealircd-3.2.1.ebuild:
  Configuration files need to be owned by user unrealircd.

  24 Jul 2004; Sven Wegener <swegener@gentoo.org> files/unrealircd.rc,
  unrealircd-3.2.1.ebuild:
  Fixed typo in init script and modified ebuild to install cron example scripts.

*unrealircd-3.2.1 (24 Jul 2004)

  24 Jul 2004; Sven Wegener <swegener@gentoo.org> -files/mkunrealircd-cert,
  files/unrealircd.confd, files/unrealircd.rc, +unrealircd-3.2.1.ebuild,
  -unrealircd-3.2_rc2.ebuild:
  Version bump. Closes bug #48965 and bug #41919. Switched from
  mkunrealircd-cert to ssl-cert.eclass.

  27 Apr 2004; Aron Griffis <agriffis@gentoo.org> unrealircd-3.1.5.1.ebuild,
  unrealircd-3.1.6.ebuild, unrealircd-3.2_rc2.ebuild:
  Add inherit eutils

  23 Apr 2004; David Holm <dholm@gentoo.org> unrealircd-3.2_rc2.ebuild:
  Added to ~ppc.

*unrealircd-3.2_rc2 (22 Apr 2004)

  22 Apr 2004; Chuck Short <zul@gentoo.org> unrealircd-3.2_rc1.ebuild,
  unrealircd-3.2_rc2.ebuild:
  RemoRemoved 3.2rc1 in place for rc1.

  22 Apr 2004; Chuck Short <zul@gentoo.org> unrealircd-3.2_rc1.ebuild:
  Updated ebuild.
  Closes #42396.

  13 Apr 2004; Chuck Short <zul@gentoo.org> files/mkunrealircd-cert:
  Fix mkunrealircd-cert. Closes #42396.

  06 Mar 2004; Chuck Short <zul@gentoo.org> files/mkunrealircd-cert: