@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/unrealircd
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.20 2004/08/14 18:37:04 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/unrealircd/ChangeLog,v 1.21 2004/08/14 20:43:09 swegener Exp $
+
+  14 Aug 2004; Sven Wegener <swegener@gentoo.org> unrealircd-3.2.1-r1.ebuild:
+  Modified the ebuild to install configuration files for aliases and networks
+  and always enable the channel owner and admin prefixes.
 
   14 Aug 2004; Sven Wegener <swegener@gentoo.org> unrealircd-3.2.1-r1.ebuild:
   Added info to pkg_postinst().
